syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "commons.proto";

option java_package = "ar.edu.itba.pod.grpc.notifications";
option java_multiple_files = true;

service NotificationsService {
  rpc RegisterForNotifications(google.protobuf.StringValue) returns (stream NotificationsResponse);
  rpc UnregisterForNotifications(google.protobuf.StringValue) returns (google.protobuf.Empty);
  rpc NotificationHistory(google.protobuf.StringValue) returns (NotificationsHistoryResponse);
}

enum NotificationType {
  NOTIFICATION_UNSPECIFIED = 0;
  NOTIFICATION_REGISTER = 1;
  NOTIFICATION_ASSIGNED_COUNTERS = 2;
  NOTIFICATION_PASSENGER_STARTED_CHECKIN = 3;
  NOTIFICATION_PASSENGER_COMPLETED_CHECKIN = 4;
  NOTIFICATION_DISMISSED_COUNTERS = 5;
  NOTIFICATION_ASSIGNED_COUNTERS_PENDING = 6;
  NOTIFICATION_ASSIGNED_COUNTERS_PENDING_CHANGED = 7;
  NOTIFICATION_UNREGISTER = 8;
}

message NotificationsResponse {
  NotificationType type= 1;
  optional string sector = 2;
  repeated Range counter_range = 3;
  optional string booking = 4;
  repeated string flights = 5;
  optional int32 people = 6;
  optional int32 pendings_ahead = 7;
  string airline = 8;
}

message NotificationsHistoryResponse {
  repeated NotificationsResponse notifications = 1;
}